# phytonet

./: .gitignore  .opencommitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  TODO.md  classes.json  ifcb_model.json  pyproject.toml  run_predictions.sh
R/: classify.R  count.R  eda.R
data/: .gitignore
data/models/20250729/: training_history_20250729_094916.csv
data/models/20250729-120937/: training_history_20250729_150003.csv
data/models/20250801-120720/: training_history_20250801_142610.csv
data/models/20250802-120929/: chukchi.csv  pry.csv  training_history_20250802_143614.csv
src/phytonet/: __init__.py  augmentations.py  cli.py  compute_normalization.py  data_utils.py  inference.py  losses.py  model.py  train.py  training_history.py  transforms.py
src/python_phyto/: __init__.py  cli.py  data_utils.py  inference.py  model.py  train.py  transforms.py
