[project]
name = "phytonet"
version = "0.1.0"
description = "Phytoplankton classification using deep learning"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Philippe Massicotte", email = "pmassicotte@hotmail.com" }]
keywords = [
  "classification",
  "computer-vision",
  "deep-learning",
  "phytoplankton",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "matplotlib>=3.10.3",
  "pandas>=2.0.0",
  "pathlib>=1.0.0",
  "pillow>=9.0.0",
  "pyarrow>=10.0.0",
  "scikit-learn>=1.3.0",
  "timm>=0.9.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "tqdm>=4.64.0",
]

[project.scripts]
phytonet-predict = "phytonet.cli:predict_cli"
phytonet-train = "phytonet.cli:train_cli"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=22.0.0",
  "isort>=5.10.0",
  "flake8>=4.0.0",
  "mypy>=1.0.0",
  "pre-commit>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.hatch.build.targets.wheel]
packages = ["src/phytonet"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
